--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "~13.3.0",
     "@nrwl/angular": "14.1.9",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
