--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "@nrwl/angular": "14.1.9",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.2",
