--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-spinner": "^13.1.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
