--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-spinner": "^13.1.1",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
