--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nrwl/angular": "14.1.9",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.2",
+    "buffer": "^6.0.3",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^7.1.0",
+    "ngx-bootstrap": "^7.1.2",
     "ngx-spinner": "^13.1.1",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.3.0",
@@ -50,7 +52,7 @@
     "@nrwl/linter": "14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "cypress": "^9.1.0",
@@ -65,5 +67,11 @@
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
+  },
+  "browser": {
+    "crypto": false,
+    "constants": false,
+    "fs": false,
+    "path": false
   }
 }
