--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@kolkov/ngx-gallery": "^2.0.1",
+    "@microsoft/signalr": "^6.0.6",
     "@nrwl/angular": "14.1.9",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.2",
